[project]
name = "brfss"
version = "0.1.0"
description = "Multi-Level modelling using BRFSS and EPA P2 Mapping Dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numpy>=2.2.6",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]
